--- a/no framework/main.css
+++ b/no framework/main.css
@@ -1,9 +1,12 @@
 body {
-    background-color: beige;
+    background-color: aliceblue;
     height: 100vh;
 }
 
-.container{
-    background-color: white;
+.container {
     height: 100vh;
+}
+
+.columns {
+    background-color: white; 
 }
